tests/ui/duplicate-name-single.fail.rs
ident_str::ident_str! {
    #name = "hello",
    #name = "world"
    =>
}

fn main() {}
